--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -5,4 +5,4 @@
 <%= link_to('Go back to hello page', {:action => 'hello', :id => 20, :page => 5}) %>
 
 <%= image_tag('rails.png', :size => '50x64', :alt => "Rails logo") %>
-<img src="/images/rails.png" alt="Rails logo" height="64" width="50" />
+<img src="/assets/images/rails.png" alt="Rails logo" height="64" width="50" />
